changes in the structure
